tests/cases/parser/literals/invalid_unicode_char.stderr
error: overlong unicode escape sequence
 --> $DIR/invalid_unicode_char.hash:3:8
2 |   
3 |   k := '\u{00000000000}'; // This is an invalid unicode char as it too big.
  |          ^^^^^^^^^^^^^^ unicode literals may only contain up to 6 hexadecimal digits
